<resources>
    <string name="app_name">VirtualMarket</string>
    <string name="err_msg_first_name">Please write a name</string>
    <string name="err_msg_last_name">Please write a surname</string>
    <string name="err_msg_email">Please write an email</string>
    <string name="err_msg_password">Please write a password</string>
    <string name="err_msg_confirm_password">Please write a confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch</string>
    <string name="register_success">Register Successful</string>
    <string name="save">KAYDET</string>
    <string name="shoppingcard">SEPET</string>
    <string name="err_msg_enter_mobile_number">Invalid phone number</string>
    <string name="title_activity_category_page">CategoryPage</string>
    <string name="profile_page">PROFİL</string>
    <string name="create_an_account">HESAP OLUŞTUR</string>
    <string name="register">KAYIT OL</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="email">E-postanız</string>


    <string name="logout">ÇIKIŞ YAP</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>