<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.UserProfileActivity">

    <Button
        android:id="@+id/shoppingcardBut"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/redForProductName"
        android:gravity="center"
        android:text="@string/shoppingcard"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="404dp"
        android:layout_height="563dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/profile_page"
                android:textColor="@color/torku_red"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center|left"
                android:hint="Adınız"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center|left"
                android:hint="Soyadınız"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center|left"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center|left"
                android:hint="Telefon Numarası"
                android:inputType="phone" />

            <Button
                android:id="@+id/saveBut"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/torku_red"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logoutBut"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/torku_red"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar_layout"
        android:layout_width="413dp"
        android:layout_height="68dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home_bottom_image_view"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/home_icon" />

        <ImageView
            android:id="@+id/shopping_cart_image_view"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/shopping_cart_red" />

        <ImageView
            android:id="@+id/user_bottom_logo_image_view"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/user_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>