<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/fifty_register">

    <ScrollView
        android:layout_width="378dp"
        android:layout_height="534dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createAnAccountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/create_an_account"
                android:textColor="@color/torku_red"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:hint="Adınız"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/lastNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:hint="Soyadınız"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:hint="Şifre"
                android:inputType="textPassword"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/confirmPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left|center"
                android:hint="Şifre Onay"
                android:inputType="textPassword"
                android:textSize="20dp" />

            <Button
                android:id="@+id/registerBut_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/torku_red"
                android:text="@string/register"
                android:textSize="25dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="183dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center|left"
                    android:text="Zaten hesabınız var mı?"
                    android:textColor="@color/torku_red"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/loginBut_register"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/white"
                    android:onClick="loginBut_registerClick"
                    android:text="@string/login"
                    android:textColor="@color/torku_red"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>